--- a/container_status_app/templates/container_status/update_container_status.html
+++ b/container_status_app/templates/container_status/update_container_status.html
@@ -6,105 +6,28 @@
 
     <!-- BootStrap CSS -->
     <link rel="stylesheet" media="screen" href={{ url_for('static', filename='bootstrap.min.css') }}>
-    <title>Update Dev Container Status</title>
+    <title>Update NAS Production Status</title>
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-            <img src="/container_status_app/static/usc_logo.jpg" width="30" class="d-inline-block align-top" alt="U.S. Cellular Logo">
-            Update NAS Development Container Status
+            <img src={{ url_for('static', filename='usc_logo.jpg') }} width="30" class="d-inline-block align-top" alt="U.S. Cellular Logo">
+            Update NAS Production Status
         </a>
-        <form method="POST">
-            {{ form.csrf_token }}
-            <button type="submit" name="logout_btn" value='logout' class="btn btn-outline-danger">Logout</button>
-        </form>
+{#        <form method="POST">#}
+{#            {{ form.csrf_token }}#}
+{#            <button type="submit" name="logout_btn" value='logout' class="btn btn-outline-danger">Logout</button>#}
+{#        </form>#}
     </nav>
-
-    <div class="container-fluid mt-3">
-        <div class="row w-50 bg-info ml-1">
-            <div class="col ml-1">
-                <form method="POST">
-                    {{ form.csrf_token }}
-                    <h5>Requested Container Environment:</h5>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="container_name" id="dev_1" value="dev_container_1" required>
-                                    <label class="form-check-label" for="dev_1">Dev Container 1</label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="container_name" id="dev_2" value="dev_container_2">
-                                    <label class="form-check-label" for="dev_2">Dev Container 2</label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="container_name" id="dev_3" value="dev_container_3">
-                                    <label class="form-check-label" for="dev_3">Dev Container 3</label>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="open_status" id="open_check">
-                                    <label class="form-check-label" for="open_check">Set to open status</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label for="request_start">Start Date</label>
-                                    <input class="form-control form-control-sm" type="date" name="start_date" id="request_start" placeholder="yyyy-m-d">
-                                    {% with messages = get_flashed_messages() %}
-                                        {% if messages %}
-                                            {% for message in messages %}
-                                                {% if 'start_date' in message %}
-                                                    <div class="alert alert-danger" role="alertdialog">
-                                                        {{ message }}
-                                                    </div>
-                                                {% endif %}
-                                            {% endfor %}
-                                        {% endif %}
-                                    {% endwith%}
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label for="request_end">End Date</label>
-                                    <input class="form-control form-control-sm" type="date" name="end_date" id="request_end" placeholder="yyyy-m-d">
-                                    {% with messages = get_flashed_messages() %}
-                                        {% if messages %}
-                                            {% for message in messages %}
-                                                {% if 'end_date' in message %}
-                                                    <div class="alert alert-danger" role="alertdialog">
-                                                        {{ message }}
-                                                    </div>
-                                                {% endif %}
-                                            {% endfor %}
-                                        {% endif %}
-                                    {% endwith%}
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label for="poc">Contact Person</label>
-                                    <input class="form-control form-control-sm" name="poc_name" type="text" id="poc">
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label for="poc_email">Email</label>
-                                    <input class="form-control form-control-sm" name="poc_email" type="email" id="poc_email">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-dark">Submit</button>
-                </form>
-            </div>
+    <div class="card">
+        <div class="card-body">
+{#            <div class="form-check">#}
+                <div class="custom-control custom-switch form-check">
+                    <input type="checkbox" class="custom-control-input" id="nasStatusSwitch">
+                    <label class="custom-control-label" for="nasStatusSwitch">NAS Production Status</label>
+                </div>
+                <button type="submit" class="btn btn-primary mt-2">Submit</button>
+{#            </div>#}
         </div>
     </div>
 
