--- a/container_status_app/templates/container_status/nas_faqs.html
+++ b/container_status_app/templates/container_status/nas_faqs.html
@@ -17,11 +17,40 @@
             NAS Automation FAQs
         </a>
     </nav>
-
+    {% if faq_file_err is defined %}
+        <div class="alert alert-danger" role="alert">
+            Internal Server error. Please report this issue to the SA3 Core Automation Team.
+        </div>
+    {% endif %}
+    {% for faq_type_key, faq_dicts in faq_dict.items() %}
+        <div class="accordion" id="{{ faq_type_key }}FAQaccordion">
+            <div class="card">
+                <div class="card-header bg-info" id="{{ faq_type_key }}FAQheading">
+                    <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#{{ faq_type_key }}FAQ" aria-expanded="false" aria-controls="{{ faq_type_key }}FAQ">
+                        <span style="font-size:larger;">{{ faq_type_key.upper() }}</span>
+                    </button>
+                    <small class="text-muted">Click to expand</small>
+                </div>
+                {% for faq_title, faq_content in faq_dicts.items() %}
+                    <div id="{{ faq_type_key }}FAQ" class="collapse" aria-labelledby="{{ faq_type_key }}FAQheading" data-parent="#{{ faq_type_key }}FAQaccordion">
+                        <div class="card-body">
+                            <div class="card">
+                                <div class="card-header bg-light">{{ faq_title }}</div>
+                            </div>
+                            <div class="card-body">
+                                {{ faq_content }}
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    {% endfor %}
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="../../static/bootstrap.min.js"></script>
     <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
