--- a/container_status_app/templates/container_status/nas_prod_status.html
+++ b/container_status_app/templates/container_status/nas_prod_status.html
@@ -79,8 +79,11 @@
                         <div class="card">
                             <h5 class="card-header bg-secondary text-white">Contact Us</h5>
                             <div class="card-body">
-                                <p>For questions, click the link to generate an email to the <a href="mailto:USCDLSA3AutomationEngineering@uscellular.com">SA3 Core Automation Engineering team.</a></p>
+                                <p>For questions, click the link to generate an email to the
+                                    <a href="mailto:USCDLSA3AutomationEngineering@uscellular.com">SA3 Core Automation Engineering team.</a>
+                                </p>
                             </div>
+                            <h5 class="card-footer m-0"><a href="{{ url_for('nas_faqs') }}" class="badge badge-primary btn-block">FAQs</a></h5>
                         </div>
                         <div class="card">
                             <h5 class="card-header bg-secondary text-white">User Guides</h5>
@@ -95,14 +98,13 @@
                                     <a href="https://usc.intranet.teldta.com/sites/NNEO_NSAA/SeGW/_layouts/15/start.aspx#/default.aspx" class="list-group-item list-group-item-action list-group-item-warning">
                                         Security Gateway Health Check
                                     </a>
-                                <a href="https://usc.intranet.teldta.com/sites/NNEO_NSAA/PAM_Reset/_layouts/15/start.aspx#/default.aspx" class="list-group-item list-group-item-action list-group-item-success">
-                                        PAM Reset
+                                    <a href="https://usc.intranet.teldta.com/sites/NNEO_NSAA/PAM_Reset/_layouts/15/start.aspx#/default.aspx" class="list-group-item list-group-item-action list-group-item-success">
+                                    PAM Reset
                                     </a>
-                                <a href="https://usc.intranet.teldta.com/sites/NNEO_NSAA/EBAAuto/_layouts/15/start.aspx#/default.aspx" class="list-group-item list-group-item-action list-group-item-dark">
-                                        EBA
+                                    <a href="https://usc.intranet.teldta.com/sites/NNEO_NSAA/EBAAuto/_layouts/15/start.aspx#/default.aspx" class="list-group-item list-group-item-action list-group-item-dark">
+                                    EBA
                                     </a>
                                 </ul>
-
                                     <p class="card-text">
                                         <small class="text-muted">If presented with the message "Sorry, this site hasn't been shared with you." after clicking a link please reach out to the project owner to have them add you.</small>
                                     </p>
