New FAQ feature.
New endpoint to display FAQs by category in accordions and a new endpoint
to add new FAQs.

--- a/container_status_app/templates/container_status/nas_faqs.html
+++ b/container_status_app/templates/container_status/nas_faqs.html
@@ -38,7 +38,13 @@
                                     <div class="card-header bg-light">{{ faq_title }}</div>
                                 </div>
                                 <div class="card-body">
-                                    {{ faq_content }}
+                                    {% if faq_content is iterable and faq_content is not string %}
+                                        {% for line in faq_content %}
+                                            {{ line }}<br>
+                                        {% endfor %}
+                                    {% else %}
+                                        {{ faq_content }}
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
