Display error if delete submitted with no FAQ selected for deletion.

--- a/container_status_app/templates/container_status/nas_add_faq.html
+++ b/container_status_app/templates/container_status/nas_add_faq.html
@@ -101,6 +101,11 @@
                         </div>
                     {% endif %}
                 {% endif %}
+                {% if faq_selected is defined and faq_selected is sameas False %}
+                    <div class="alert alert-danger" role="alert">
+                        Please select at least 1 FAQ to delete.
+                    </div>
+                {% endif %}
             </div>
         </div>
     {% endif %}
